# azure-pipelines-fastapi-training

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  skaffold.yaml
azure-pipelines/: azure-pipelines.yaml
azure-pipelines/template/: build-docker-image.yaml  deployment.yaml  testing-strategy.yaml
azure_pipelines/: azure-pipelines.yaml
azure_pipelines/templates/: build-docker-image-jobs.yaml  build-docker-image-stages.yaml  deployment-stages.yaml  testing-strategy-stages.yaml  testing_strategy.yaml
books/: api.py  keepalive.py  main.py  openapi.py  schemas.py  utils.py
chart/: Chart.yaml
chart/templates/: config-maps.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespaces.yaml  svc.yaml
chart/values/: development.yaml  production.yaml  staging.yaml
dockerfiles/: Dockerfile  base.Dockerfile
scripts/: entrypoint.sh  run_fastapi.sh
tests/: conftest.py  test_clear_books_endpoint.py  test_create_book_endpoint.py  test_delete_book_endpoint.py  test_list_books_endpoint.py  test_retrieve_book_endpoint.py
